@@ -11,6 +11,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,6 +22,6 @@ public class CategoryService {
     CategoryMapper categoryMapper;
 
     public List<CategoryResponse> getAll() {
-        return categoryRepository.findAll().stream().map(cat -> categoryMapper.toCategoryResponse(cat)).toList();
+        return categoryRepository.findAll().stream().map(cat -> categoryMapper.toCategoryResponse(cat)).collect(Collectors.toList());
     }
 }
